# career-tracker-hr-api

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/workflows/: hr_system_api_workflow.yml
hr_system/: entrypoint.sh  manage.py
hr_system/api/: filters.py  serializers.py  urls.py  utils.py  views.py
hr_system/applicants/: admin.py  apps.py  models.py
hr_system/applicants/management/commands/: import_data.py
hr_system/applicants/migrations/: 0001_initial.py  0002_favorites_remove_applicant_grade_delete_grade_and_more.py  0003_skill_specialization.py  0004_alter_applicant_phone_alter_applicant_photo_and_more.py
hr_system/data/: applicants.csv  skills.csv  vacancies.csv
hr_system/hr_system/: asgi.py  settings.py  urls.py  wsgi.py
hr_system/students/: apps.py
hr_system/users/: admin.py  models.py
hr_system/users/migrations/: 0001_initial.py
hr_system/vacancies/: admin.py  enums.py  models.py
hr_system/vacancies/migrations/: 0001_initial.py  0002_remove_wage_vacancy_remove_vacancy_location_type_and_more.py
tests/: conftest.py
